--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 11 Dec 2000</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Personal E-mail:</strong> <a href=""> rk399504@gmail.com</a></li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +918765626301</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Varanasi, INDIA</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Varanasi, INDIA</li>
                 </ul>
               </div>
               <div class="col-lg-6">
