--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile1-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Rohan Kumar</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/RohanKu62190048" target=
