Update copyright section

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy;NoCopyright <strong><span>~Portfolio</span></strong>
+        Copyright © 2021 All Rights Reserved. Developed and Maintained by . <strong><span>~Rohan Kumar</span></strong>
       </div>
     
     </div>
