--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>This is Rohan Kumar a passionate programmer and Enthusiastic code.Taking some action with full of my passion is the nothing but my iternal attitude to perform any task and leave only after completion of it.</p>
+          <p>This is Rohan Kumar a passionate programmer and Enthusiastic coder.Taking action with full of my passion is nothing but my iternal attitude to perform the task and leave only after completion of it.</p>
         </div>
 
         <div class="row">
@@ -98,7 +98,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Web Developer, Coder &amp; Editor</h3>
             <p class="font-general">
-              Development and designing is just a part of my college jurney with I take seriously and enjoy alot.
+              Development and designing is just a part of my college journey in which enjoyed alot.
             </p>
             <div class="row">
               <div class="col-lg-6">
