--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Rohan Kumar</h1>
-      <p>Hey I'm <span class="typed" data-typed-items="Engineer,Developer, Photographer"></span></p>
+      <p>Hey, I'm <span class="typed" data-typed-items="Engineer,Developer, Photographer"></span></p>
     </div>
   </section><!-- End Hero -->
 
