update spell in index file

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>This is Rohan Kumar a passionate programmer and Enthusiastic coder.Taking action with full of my passion is nothing but my iternal attitude to perform the task and leave only after completion of it.</p>
+          <p>This is Rohan Kumar a passionate programmer and an Enthusiastic coder.Taking action with full of my passion is nothing but my iternal attitude to perform any task and leave only after completion of it.</p>
         </div>
 
         <div class="row">
@@ -98,7 +98,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Web Developer, Coder &amp; Editor</h3>
             <p class="font-general">
-              Development and designing is just a part of my college journey in which enjoyed alot.
+              Development and designing is nothing but a part of my college journey in which I enjoyed alot.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -127,7 +127,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Here are some skills that makes me different and also help me in many aspects life.</p>
+          <p>Here are some skills that makes me different and also help me in many aspects of life.</p>
         </div>
 
         <div class="row skills-content">
