--- a/index.html
+++ b/index.html
@@ -299,6 +299,16 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-ler">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/pantech3.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/pantech3.jpg" data-gall="portfolioGallery" class="venobox" title="ler 3"><i class="bx bx-plus"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ler">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/google.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/google.JPG" data-gall="portfolioGallery" class="venobox" title="ler 3"><i class="bx bx-plus"></i></a>
@@ -327,16 +337,8 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-cur">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/tcs1.JPG" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/tcs1.JPG" data-gall="portfolioGallery" class="venobox" title="cur 2"><i class="bx bx-plus"></i></a>
-                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
-              </div>
-            </div>
-          </div>
-
+          
+          
           <div class="col-lg-4 col-md-6 portfolio-item filter-ler">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/python2.JPG" class="img-fluid" alt="">
@@ -376,7 +378,33 @@
               </div>
             </div>
           </div>
-
+          <div class="col-lg-4 col-md-6 portfolio-item filter-par">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/pantech1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/pantech1.jpg" data-gall="portfolioGallery" class="venobox" title="par 3"><i class="bx bx-plus"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-par">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/pantech2.JPG" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/pantech2.jpg" data-gall="portfolioGallery" class="venobox" title="par 3"><i class="bx bx-plus"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cur">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/tcs1.JPG" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/tcs1.JPG" data-gall="portfolioGallery" class="venobox" title="cur 2"><i class="bx bx-plus"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
