Add managament certificate code in index file

--- a/index.html
+++ b/index.html
@@ -405,6 +405,15 @@
               </div>
             </div>
           </div>
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cur">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/management.JPG" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/tcs1management.JPG" data-gall="portfolioGallery" class="venobox" title="cur 2"><i class="bx bx-plus"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
