Adding digital marketing certificate

--- a/index.html
+++ b/index.html
@@ -359,11 +359,21 @@
             </div>
           </div>
 
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-par">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/python3.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/python3.JPG" data-gall="portfolioGallery" class="venobox" title="par 3"><i class="bx bx-plus"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+              </div>
+            </div>
+          </div>
+<div class="col-lg-4 col-md-6 portfolio-item filter-ler">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/digi.JPG" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/digi.JPG" data-gall="portfolioGallery" class="venobox" title="ler 1"><i class="bx bx-plus"></i></a>
                 <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
               </div>
             </div>
