Add IEEE cerificate image and code in index.html

--- a/index.html
+++ b/index.html
@@ -287,6 +287,17 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-cur">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/IEEE.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/IEEE.png" data-gall="portfolioGallery" class="venobox" title="par 1"><i class="bx bx-plus"></i></a>
+                <!-- <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a> -->
+              </div>
+            </div>
+          </div>
+
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-par">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/hackerank.JPG" class="img-fluid" alt="">
@@ -369,7 +380,8 @@
               </div>
             </div>
           </div>
-<div class="col-lg-4 col-md-6 portfolio-item filter-ler">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ler">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/digi.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
