--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio - Rohan_r.kumar
-
-  </title>
+  <title>Rohan Kumar | Software Engineer</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -20,6 +18,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -31,6 +30,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link href="assets/css/modern-overrides.css" rel="stylesheet">
 
 
 </head>
@@ -114,7 +114,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 21</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 25</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.tech</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Branch:</strong> Electronics Engineering</li>
 
@@ -559,7 +559,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        Copyright © 2021 All Rights Reserved. Developed and Maintained by <strong><span>Rohan Kumar</span></strong>
+        Copyright © 2025 All Rights Reserved. Developed and Maintained by <strong><span>Rohan Kumar</span></strong>
       </div>
 
     </div>
