--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Rohan Kumar</h1>
-      <p>Hey, I'm <span class="typed" data-typed-items="Engineer,Developer, Photographer"></span></p>
+      <p>Hey, I'm <span class="typed" data-typed-items="Data Science Engineer, Backend Developer, AI Researcher"></span>
+      </p>
     </div>
   </section><!-- End Hero -->
 
@@ -89,8 +90,10 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>This is Rohan Kumar a passionate programmer and an Enthusiastic coder.Taking action with full of my passion
-            is nothing but my iternal attitude to perform any task and leave only after completion of it.</p>
+          <p>I’m a Data Science Engineer with strong experience in building intelligent systems, scalable backend
+            architectures, and full-stack applications. With a background in software engineering and hands-on work
+            across Python, Node.js, FastAPI, React, MongoDB, SQL, and cloud platforms, I enjoy solving real-world
+            problems using clean code, data-driven insights, and automation.</p>
         </div>
 
         <div class="row">
@@ -98,9 +101,10 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Web Developer, Coder &amp; Editor</h3>
+            <h3>Data Science Engineer &amp; Full Stack Developer</h3>
             <p class="font-general">
-              Development and designing is nothing but a part of my college journey in which I enjoyed alot.
+              I can fix your bug!! If you're looking for someone who can combine data science + backend engineering +
+              product mindset, let’s connect.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -109,7 +113,7 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Personal E-mail:</strong> <a href="">
                       rk399504@gmail.com</a></li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +918765626301</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Varanasi, INDIA</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Gurugram, India</li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -134,63 +138,52 @@
         </div>
 
         <div class="row skills-content">
-
           <div class="col-lg-6" data-aos="fade-up">
-
             <div class="progress">
-              <span class="skill">HTML <i class="val">80%</i></span>
+              <span class="skill">Python (Pandas, NumPy, Selenium) <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="80">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
-
             <div class="progress">
-              <span class="skill">CSS <i class="val">50%</i></span>
+              <span class="skill">Machine Learning / NLP <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="50">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
-
             <div class="progress">
-              <span class="skill">bootstrap <i class="val">60%</i></span>
+              <span class="skill">Backend (Node.js, FastAPI) <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="60">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
-
           </div>
-
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
             <div class="progress">
-              <span class="skill">C++ <i class="val">80%</i></span>
+              <span class="skill">Database (MongoDB, SQL) <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="80">
+                <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
-
             <div class="progress">
-              <span class="skill">Python <i class="val">80%</i></span>
+              <span class="skill">DevOps (Docker, Cloud) <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="80">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
-
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">60%</i></span>
+              <span class="skill">React & Ecosystem <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="60">
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
-
           </div>
-
         </div>
 
       </div>
@@ -207,12 +200,14 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <!-- <h3 class="resume-title">Sumary</h3> -->
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
-              <h4>ROHAN KUMAR</h4>
-              <!-- <p><em></em></p> -->
+              <h4>Rohan Kumar</h4>
+              <p><em>Data Science Engineer with strong experience in building intelligent systems, scalable backend
+                  architectures, and full-stack applications. Hands-on work across Python, Node.js, FastAPI, React,
+                  MongoDB, SQL, and cloud platforms.</em></p>
               <ul>
-                <li>Varanasi ,IN</li>
+                <li>Gurugram, Haryana, India</li>
                 <li>(+91) 8765626301</li>
                 <li>rk399504@gmail.com</li>
               </ul>
@@ -220,62 +215,79 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bechelor in Technology (Electronics Engineering)</h4>
-              <h5>2018 - 2022</h5>
-              <p><b>Dr. Ambedkar Institute of Technology For Handicapped, Kanpur</b></p>
-              <p>
-                <b1>Affiliated to A.K.T.U.</b1>
-              </p>
-              <p><em>Percentile:</em> 85%</p>
+              <h4>Minor in AI, Artificial Intelligence</h4>
+              <h5>Nov 2024 - Oct 2025</h5>
+              <p><em>Indian Institute of Technology, Ropar</em></p>
             </div>
             <div class="resume-item">
-              <h4>Intermidiate</h4>
-              <h5>2016-17</h5>
-              <p>
-              <h6><b>Udai Pratap Public School,Varanasi,U.P.</b></h6>
-              </p>
-              <p><em>Percentage: </em>78.40%</p>
+              <h4>B.Tech, Electronics Engineering</h4>
+              <h5>July 2018 - June 2022</h5>
+              <p><em>Dr. A.P.J. Abdul Kalam Technical University (AITH)</em></p>
+            </div>
+            <div class="resume-item">
+              <h4>Intermediate, Science</h4>
+              <h5>May 2015 - April 2017</h5>
+              <p><em>Udai Pratap Public School</em></p>
             </div>
 
+            <h3 class="resume-title">Publications</h3>
             <div class="resume-item">
-              <h4>High School</h4>
-              <h5>2014-15</h5>
-              <p>
-              <h6><b>Udai Pratap Public School,Varanasi,U.P.</b></h6>
-              </p>
-              <p><em>CGPA: </em>8.2</p>
+              <h4>Research Paper</h4>
+              <p><em>Investigation of Pairwise Error Probability of α-mu Fading Channel in Spatially Modulated MIMO
+                  System.</em></p>
             </div>
           </div>
+
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Projects</h3>
+            <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Automatic Google Meet Link Generator</h4>
-              <h5>2020-21</h5>
-
-              <p><b>Github:<a href="https://github.com/RohanKumar122/Tsmart-BOT">
-                    https://github.com/RohanKumar122/Tsmart-BOT</a></b>
-              </p>
-
+              <h4>Engineer - Data Science</h4>
+              <h5>March 2025 - Present</h5>
+              <p><em>AGL - Hakuhodo, Gurugram, India</em></p>
               <ul>
-                <li>It is a GUI based software created by Python Programming Language.</li>
-                <li>General Library used are Selenium which gives the task to a cloned Google chrome.
-                </li>
-                <li>Tkinter is use to develop used based interface so as to operate it easily.</li>
-                <li>Some other libraries are used like pandas for making command</li>
+                <li>Automated key sellout platforms across multiple countries, reducing manual effort by 90% and
+                  delivering faster, more accurate operations.</li>
+                <li>Built a full analytics dashboard from scratch to monitor all automation workflows on a single
+                  interface, improving visibility and performance by 80%.</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Stegenography Using MATLAB</h4>
-              <h5>2019-20</h5>
-              <p><em>Encryption of data</em></p>
+              <h4>Software Developer</h4>
+              <h5>March 2023 - March 2025</h5>
+              <p><em>EMSEC, Bengaluru, India</em></p>
               <ul>
-                <li>Stagenogary is a software based program which is generally used in Encrption of data in to an image.
-                </li>
-                <li>Encryption takes place in image as in the form of matrix in MATLAB.</li>
-                <li>As Image is nothing but the combination of pixel and each pixel is formed by RBG.</li>
-                <li>To decrypt the data decryption key should be needed.</li>
+                <li>Developed dynamic web-scraping pipelines for highly complex, schema-driven websites with automated
+                  scheduling.</li>
+                <li>Applied NLP techniques on large datasets (MongoDB) for entity extraction and vectorization; indexed
+                  data into Elasticsearch.</li>
+                <li>Containerized 30+ microservices using Docker and managed Docker Compose environments.</li>
+                <li>Built custom Honeypots tailored for telecom and industrial grids to detect intrusion attempts.</li>
+                <li>Developed an AI chatbot system using Ollama, OpenAI GPT, and Claude for product-specific knowledge
+                  responses.</li>
               </ul>
             </div>
+            <div class="resume-item">
+              <h4>Software Developer Intern</h4>
+              <h5>Dec 2022 - March 2023</h5>
+              <p><em>EMSEC</em></p>
+              <ul>
+                <li>Developed backend APIs using Flask and Express.js, integrating with database services.</li>
+                <li>Performed MongoDB CRUD operations aligned with dynamic schema requirements.</li>
+                <li>Built reusable React components styled with Tailwind CSS.</li>
+                <li>Created Dockerfiles and deployed services on servers.</li>
+              </ul>
+            </div>
+
+            <h3 class="resume-title">Certifications</h3>
+            <div class="resume-item">
+              <ul>
+                <li>Machine Learning with Python - Level 1</li>
+                <li>The Fundamentals of Digital Marketing</li>
+                <li>Python Programming</li>
+                <li>Research Paper on Performance Analysis of Cooperative Communication</li>
+              </ul>
+            </div>
+
           </div>
         </div>
 
